--- a/A1/Makefile
+++ b/A1/Makefile
@@ -1,2 +1,2 @@
 dom:
-	g++ -o dominant -std=c++11 dominant.cpp `pkg-config --libs opencv`
+	g++ -o dominant -std=c++11 *.cpp `pkg-config --libs opencv`
