Add workflow and basic matching and shit

--- a/A4/Makefile
+++ b/A4/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -o mosaic -std=c++11 *.cpp `pkg-config --libs opencv`
+	g++ -o mosaic -std=c++11 *.cpp `pkg-config --libs opencv` -lpthread
